fixing the spacing between the links in the footer

--- a/public/stylesheets/HomePage.css
+++ b/public/stylesheets/HomePage.css
@@ -149,6 +149,7 @@
 .link {
     font-family: 'Lato', sans-serif;
     font-family: 'Noto Sans Hebrew', sans-serif;
+    margin-right: 2vw;
 }
 
 .footer-links{
